python/uwapi/uw/bots.h

 typedef uint32_t uint32;
 typedef uint64_t uint64;
 typedef enum UwPriorityEnum
 {
  UwPriorityEnum_Disabled = 0,
  UwPriorityEnum_Normal = 1,
  UwPriorityEnum_High = 2,
 } UwPriorityEnum;
               uint64 uwGetLobbyId(void);
               uint64 uwGetUserId(void);
               void uwAdminStartGame(void);
               void uwAdminTerminateGame(void);
               void uwAdminSetGameSpeed(float speed);
               void uwAdminSetWeatherSpeed(float speed, float offset);
               void uwAdminAddAi(void);
               void uwAdminKickPlayer(uint32 playerId);
               void uwAdminPlayerSetAdmin(uint32 playerId, bool admin);
               void uwAdminPlayerSetName(uint32 playerId, const char *name);
               void uwAdminPlayerJoinForce(uint32 playerId, uint32 forceId);
               void uwAdminForceJoinTeam(uint32 forceId, uint32 team);
               void uwAdminForceSetColor(uint32 forceId, float r, float g, float b);
 typedef enum UwOrderTypeEnum
 {
  UwOrderTypeEnum_None = 0,
  UwOrderTypeEnum_Stop = 1,
  UwOrderTypeEnum_Guard = 2,
  UwOrderTypeEnum_Run = 3,
  UwOrderTypeEnum_Fight = 4,
  UwOrderTypeEnum_Load = 5,
  UwOrderTypeEnum_Unload = 6,
  UwOrderTypeEnum_SelfDestruct = 7,
 } UwOrderTypeEnum;
 typedef enum UwOrderPriorityFlags
 {
  UwOrderPriorityFlags_None = 0,
  UwOrderPriorityFlags_Assistant = 1 << 0,
  UwOrderPriorityFlags_User = 1 << 1,
  UwOrderPriorityFlags_Enqueue = 1 << 2,
  UwOrderPriorityFlags_Repeat = 1 << 3,
 } UwOrderPriorityFlags;
 typedef struct UwOrder
 {
  uint32 entity;
  uint32 position;
  UwOrderTypeEnum order;
  UwOrderPriorityFlags priority;
 } UwOrder;
               void uwOrder(uint32 unit, const UwOrder *data);
 typedef struct UwOrders
 {
  const UwOrder * orders;
  uint32 count;
 } UwOrders;
               void uwOrders(uint32 unit, UwOrders *data);
               void uwCommandPlaceConstruction(uint32 constructionProto, uint32 position, float yaw, uint32 recipeProto, UwPriorityEnum priority);
               void uwCommandSetRecipe(uint32 unitOrConstructionId, uint32 recipeProto);
               void uwCommandSetPriority(uint32 unitOrConstructionId, UwPriorityEnum priority);
               void uwCommandLoad(uint32 unitId, uint32 resourceProto);
               void uwCommandUnload(uint32 unitId);
               void uwCommandMove(uint32 unitId, uint32 position, float yaw);
               void uwCommandAim(uint32 unitId, uint32 targetId);
               void uwCommandRenounceControl(uint32 entityId);
               void uwCommandSelfDestruct(uint32 entityId);