csharp/uwapi/interop.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwOrder(uint unit, ref UwOrder data);

        [StructLayout(LayoutKind.Sequential)]
        public struct UwOrders
        {
            public IntPtr orders;
            public uint count;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwOrders(uint unit, ref UwOrders data);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandPlaceConstruction(uint proto, uint position, float yaw);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandSetRecipe(uint unit, uint recipe);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandSetPriority(uint unit, UwPriorityEnum priority);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandLoad(uint unit, uint resourceType);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandUnload(uint unit);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandMove(uint unit, uint position, float yaw);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandAim(uint unit, uint target);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandRenounceControl(uint unit);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwCommandSelfDestruct(uint unit);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong uwGetLobbyId();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong uwGetUserId();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminKickPlayer(uint player);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminPlayerSetAdmin(uint player, [MarshalAs(UnmanagedType.I1)] bool admin);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminPlayerSetName(uint player, [MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminPlayerJoinForce(uint player, uint force);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminForceJoinTeam(uint force, uint team);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminForceSetColor(uint force, float r, float g, float b);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminAddAi();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminStartGame();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminTerminateGame();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminSetGameSpeed(float speed);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwAdminSetWeatherSpeed(float speed, float offset);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSendCameraSuggestion(uint position);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSendMapSelection([MarshalAs(UnmanagedType.LPStr)] string path);

    }
}
